// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<div
  className="toolbar snapshot-class"
  data-qa="snapshot-qa"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    justify="flex-end"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="2"
    >
      <Memo(SearchBar)
        className="searchFieldContent ie11SearchBarTextCorrection snapshot-class"
        data-qa="table-search-bar"
        onCancelSearch={[MockFunction]}
        onChange={[Function]}
        placeholder="placeholder..."
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
    />
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Snapshot Testing Required Props 1`] = `
<div
  className="toolbar"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    justify="flex-end"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="2"
    >
      <Memo(SearchBar)
        className="searchFieldContent ie11SearchBarTextCorrection"
        data-qa="table-search-bar"
        onCancelSearch={[MockFunction]}
        onChange={[Function]}
        placeholder="placeholder..."
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
    />
  </WithStyles(ForwardRef(Grid))>
</div>
`;
